structure carte, modele

--- a/01-Modularite/source.tex
+++ b/01-Modularite/source.tex
@@ -37,7 +37,7 @@ On parle de multimodalité lorsqu'on cherche à apprendre des relations entre do
 Un défi de l'apprentissage multimodal vient de la nature des signaux: comment faire pour que les modalités soient traitées de façon équilibrée ? 
 %
 
-\section{Cartes auto-organisatrices}\ref{sec:som001}
+\section{Cartes auto-organisatrices}\label{sec:som001}
 
 Dans cette thèse, nous nous intéressons particulièrement aux architectures de \emph{cartes auto-organisatrices}, abrégées par SOM (self-organizing maps). Le modèle de cartes auto-organisatrice a été initialement développé par Kohonen \cite{Kohonen1982}; le terme de cartes de Kohonen est ainsi utilisé pour désigner ce modèle initial. De nombreux modèles dérivés ont ensuite été développés à partir de ce modèle initial, sur diverses applications. On décompte par exemple plus de 11000 travaux utilisant les cartes de Kohonen dans la littérature en 2010(citer biblio).
 Applications ?
@@ -123,15 +123,15 @@ Les cartes de forme autre que 1D ou 2D sont moins couramment utilisées, mais pe
 \begin{figure}
 \centering
 \includegraphics[width=0.7\textwidth]{som2d}
-\caption{Dépliement d'une SOM 2D sur des données dans le plan $[0,1]^2$ [citation]}
-\label{fig:som2d}
+\caption{Dépliement d'une SOM 2D sur des données dans le plan $[0,1]^2$ [citation] \label{fig:som2d}}
+
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=0.7\textwidth]{som1d}
-\caption{Dépliement d'une SOM 1D sur des données dans un triangle 2D [citation]}
-\label{fig:som1d}
+\caption{Dépliement d'une SOM 1D sur des données dans un triangle 2D [citation] \label{fig:som1d}}
+
 \end{figure}
 
 \subsection{Mémoire associative et SOM}
