--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,7 @@
 \usepackage{colortbl}
 \usepackage{amsmath}
 \usepackage{amsthm}
+\usepackage{stmaryrd}
 \usepackage{array}
 \usepackage{url}
 \usepackage[ruled,french,frenchkw,onelanguage]{algorithm2e}
